--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
 
 <hr>
-<a href="C:\Users\ACER\Documents\Angela Yu Web Developer\HTML- Personal Site\hobbies.html" alt="hobbies"</alt><h3>Some of my <em>favorite</em> things</h3></a>
-<h3><strong><a href="C:\Users\ACER\Documents\Angela Yu Web Developer\HTML- Personal Site\contact.html">Contact me</a></strong></h3>
+<a href="hobbies.html" alt="hobbies"</alt><h3>Some of my <em>favorite</em> things</h3></a>
+<h3><strong><a href="contact.html">Contact me</a></strong></h3>
 
 
 </body>
