--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <ul>
   <li><a href="https://hsvdal.co.za/">Vredendal Highschool</a>, class of 2011</li>
   <li><a href="https://www.probeautydirectory.co.za/cape-town/the-make-up-issue-cpt">The Makeup Issue</a>, class of 2012</li>
-  <li><a href="AngelaYuPhoto.jpeg">Udemy Full Stack Web Developer course  for 2021</a> by Angela Yu</li>
+  <li><a href="#"><img src="AngelaYuPhoto.jpeg" width="200" height="200">Udemy Full Stack Web Developer course  for 2021> by Angela Yu</a></li>
   <li><a href="ColtSteele.jpeg">Udemy Full Stack Web Developer course for 2021</a> by Colt Steel</li>
 </ul>
 <hr>
