--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <table cellspacing="20">
-    <td><img  src="anicaProfilePhoto.jpeg" alt="anica profile picture" width="200"></td>
+    <td><img  src="/images/anicaProfilePhoto.jpeg" alt="anica profile picture" width="200"></td>
     <td><h1>Anica de Jager</h1>
     <p><em>Full Stack Web Developer student</em></p>
     <p>Follow me on my journey as I go from an <em>absolute</em> beginner with <strong>no</strong> prior computer or development experience, to a Full Stack Web Developer.</p>
@@ -20,7 +20,7 @@
   <li><a href="https://hsvdal.co.za/">Vredendal Highschool</a>, class of 2011</li>
   <li><a href="https://www.probeautydirectory.co.za/cape-town/the-make-up-issue-cpt">The Makeup Issue</a>, class of 2012</li>
   <li><a href="#"><img src="AngelaYuPhoto.jpeg" width="200" height="200">Udemy Full Stack Web Developer course  for 2021> by Angela Yu</a></li>
-  <li><a href="ColtSteele.jpeg">Udemy Full Stack Web Developer course for 2021</a> by Colt Steel</li>
+  <li><a href="/images/ColtSteele.jpeg" download target="_blank"><img src="ColtSteele.jpeg" width="200" height="200">Udemy Full Stack Web Developer course for 2021</a> by Colt Steel</li>
 </ul>
 <hr>
 <h3>Work Experience</h3>
