--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <table cellspacing="20">
-    <td><img  src="cv/Images/AngelaYuPhoto.jpeg" alt="anica profile picture" width="200"></td>
+    <td><img  src="anica.jpg" alt="anica profile picture" width="200"></td>
     <td><h1>Anica de Jager</h1>
     <p><em>Full Stack Web Developer student</em></p>
     <p>Follow me on my journey as I go from an <em>absolute</em> beginner with <strong>no</strong> prior computer or development experience, to a Full Stack Web Developer.</p>
@@ -19,6 +19,8 @@
 <ul>
   <li><a href="https://hsvdal.co.za/">Vredendal Highschool</a>, class of 2011</li>
   <li><a href="https://www.probeautydirectory.co.za/cape-town/the-make-up-issue-cpt">The Makeup Issue</a>, class of 2012</li>
+  <li>UDEMY Full Stack Developer Course for 2021 By Angelina Yu</li>
+  <li>UDEMY Full Stack Developer Course for 2021 By Colt Steele</li>
 </ul>
 <hr>
 <h3>Work Experience</h3>
