--- a/hobbies.html
+++ b/hobbies.html
@@ -7,13 +7,13 @@
   <body>
   <h3>Some of my <em>favorite</em> things:</h3>
     <ol>
-    <li><a href="C:\Users\ACER\Documents\Angela Yu Web Developer\HTML- Personal Site\my-love-for-programming.jpeg">Learning web development!</a>
-    <li><a href="C:\Users\ACER\Documents\Angela Yu Web Developer\HTML- Personal Site\self-improvement.jpeg">Self improvement practices</a></li>
-    <li><a href="C:\Users\ACER\Documents\Angela Yu Web Developer\HTML- Personal Site\ontologicalmathematics.jpeg">Ontological mathematics</a></li>
-    <li><a href="C:\Users\ACER\Documents\Angela Yu Web Developer\HTML- Personal Site\bubblebath.jpeg">Bubble baths</a></li>
-    <li><a href="C:\Users\ACER\Documents\Angela Yu Web Developer\HTML- Personal Site\deathcore.jpeg">Deathcore music</a></li>
-    <li><a href="C:\Users\ACER\Documents\Angela Yu Web Developer\HTML- Personal Site\natureDeer.jpeg">Nature in general</a></li>
-    <li><a href="C:\Users\ACER\Documents\Angela Yu Web Developer\HTML- Personal Site\Roadtrip.jpeg">Roadtrips</a></li>
+    <li>Learning web development!</a>
+    <li>Self improvement practices</a></li>
+    <li>Ontological mathematics</a></li>
+    <li>Bubble baths</a></li>
+    <li>Deathcore music</a></li>
+    <li>Nature in general</a></li>
+    <li>Roadtrips</a></li>
     </ol>
   </body>
 </html>
