--- a/hobbies.html
+++ b/hobbies.html
@@ -7,13 +7,13 @@
   <body>
   <h3>Some of my <em>favorite</em> things:</h3>
     <ol>
-    <li>Learning web development!</a>
-    <li>Self improvement practices</a></li>
-    <li>Ontological mathematics</a></li>
-    <li>Bubble baths</a></li>
-    <li>Deathcore music</a></li>
-    <li>Nature in general</a></li>
-    <li>Roadtrips</a></li>
+    <li>Learning web development!</li>
+    <li>Self improvement practices</li>
+    <li>Ontological mathematics</li>
+    <li>Bubble baths</li>
+    <li>Deathcore music</li>
+    <li>Nature in general</li>
+    <li>Roadtrips</li>
     </ol>
   </body>
 </html>
